--- a/.github/workflows/push_arxiv.yml
+++ b/.github/workflows/push_arxiv.yml
@@ -8,6 +8,7 @@ on:
   schedule:
     - cron: '0 10 * * *' # 每天 UTC 时间 10:00 触发, 即上海时间18点
     - cron: '0 0 * * *' # 每天 UTC 时间 00:00 触发, 即上海时间8点00
+    - cron: '0 6 * * *' # 每天 UTC 时间 06:00 触发, 即上海时间14点00
 
 jobs:
   daily-push:
